--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -20,24 +20,21 @@
           <p class="lead">Endereço de Entrega:</p>
         </div>
         <div class="col-sm-6 col-xs-12">
-          <div class="form-group">
-            <label class="control-label sr-only" for="endereco"><i class="fa fa-check"></i> Endereço</label>
-            <input type="text" class="form-control" id="endereco" name="address" ngModel required minlength="5" placeholder="Endereço" autocomplete="off">
-            <span class="help-block"></span>
-          </div>
+          <mt-input></mt-input>
         </div>
         <div class="col-sm-2 col-xs-6">
-          <div class="form-group has-success">
+          <div class="form-group" [class.has-success]="iptNumber.valid && (iptNumber.dirty || iptNumber.touched)"
+               [class.has-error]="!iptNumber.valid && (iptNumber.dirty || iptNumber.touched)">
             <label class="control-label sr-only" for="numero"><i class="fa fa-check"></i> Número</label>
-            <input type="text" class="form-control" id="numero" name="number" ngModel required placeholder="Número" autocomplete="off">
-            <span class="help-block"><i class="fa fa-check"></i> Ok</span>
+            <input type="text" class="form-control" id="numero" #iptNumber="ngModel" name="number" ngModel required placeholder="Número" autocomplete="off">
+            <span class="help-block" *ngIf="iptNumber.valid && (iptNumber.dirty || iptNumber.touched)"><i class="fa fa-check"></i> Ok</span>
+            <span class="help-block" *ngIf="!iptNumber.valid && (iptNumber.dirty || iptNumber.touched)"><i class="fa fa-remove"></i> Campo obrigatório</span>
           </div>
         </div>
         <div class="col-sm-4 col-xs-6">
-          <div class="form-group has-error">
+          <div class="form-group">
             <label class="control-label sr-only" for="complemento"><i class="fa fa-check"></i> Complemento</label>
-            <input type="text" class="form-control" id="complemento" name="optional" ngModel placeholder="Complemento" autocomplete="off">
-            <span class="help-block"><i class="fa fa-remove"></i> Help block with error</span>
+            <input type="text" class="form-control" id="complemento" #iptOptional="ngModel" name="optional" ngModel placeholder="Complemento" autocomplete="off">
           </div>
 
         </div>
