--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,7 +1,7 @@
-<div class="form-group" [class.has-success]="iptAddress.valid && (iptAddress.dirty || iptAddress.touched)"
-     [class.has-error]="!iptAddress.valid && (iptAddress.dirty || iptAddress.touched)">
-  <label class="control-label sr-only" for="endereco"><i class="fa fa-check"></i> Endereço</label>
-  <input type="text" class="form-control" id="endereco" #iptAddress="ngModel" name="address" ngModel required minlength="5" placeholder="Endereço" autocomplete="off">
-  <span class="help-block" *ngIf="iptAddress.valid && (iptAddress.dirty || iptAddress.touched)"><i class="fa fa-check"></i> Ok</span>
-  <span class="help-block" *ngIf="!iptAddress.valid && (iptAddress.dirty || iptAddress.touched)"><i class="fa fa-remove"></i> Campo obrigatório</span>
+<div class="form-group" [class.has-success]="hasSuccess()"
+     [class.has-error]="hasError()">
+  <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> {{label}}</label>
+  <ng-content></ng-content>
+  <span class="help-block" *ngIf="hasSuccess()"><i class="fa fa-check"></i> Ok</span>
+  <span class="help-block" *ngIf="hasError()"><i class="fa fa-remove"></i> {{errorMessage}}</span>
 </div>
