Início da refatoração para usar reactive forms

--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -13,7 +13,18 @@
         </div>
       </div>
 
-      <div class="row invoice-info">
+      <div class="row">
+        <div class="col-xs-12">
+          <p class="lead">Seus dados</p>
+        </div>
+        <div class="col-sm-6 col-xs-12">
+          <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" label="Endereço" >
+            <input type="text" class="form-control" id="name" name="name" ngModel required minlength="5" placeholder="Nome" autocomplete="off">
+          </mt-input-container>
+        </div>
+      </div>
+
+      <div class="row">
         <div class="col-xs-12">
           <p class="lead">Endereço de Entrega:</p>
         </div>
