--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -4,7 +4,7 @@
 
 <section class="content">
   <section class="invoice">
-    <form #form="ngForm" novalidate>
+    <form [formGroup]="orderForm" novalidate>
       <div class="row">
         <div class="col-xs-12">
           <h2 class="page-header">
@@ -14,12 +14,27 @@
       </div>
 
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-sm-9">
           <p class="lead">Seus dados</p>
         </div>
+        <div class="col-xs-12 col-sm-3">
+          <span class="help-block pull-right has-error-block" *ngIf="orderForm.hasError('emailsNotMatch')">
+            <i class="fa fa-remove"></i> E-Mails não conferem
+          </span>
+        </div>
         <div class="col-sm-6 col-xs-12">
-          <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" label="Endereço" >
-            <input type="text" class="form-control" id="name" name="name" ngModel required minlength="5" placeholder="Nome" autocomplete="off">
+          <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" label="Nome" >
+            <input type="text" class="form-control" id="name" formControlName="name" placeholder="Nome" autocomplete="off">
+          </mt-input-container>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-container errorMessage="E-Mail Inválido" label="E-mail">
+            <input type="text" class="form-control" id="email" formControlName="email" placeholder="E-Mail" autocomplete="off">
+          </mt-input-container>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-container errorMessage="E-Mail Inválido" label="Confirmar E-Mail">
+            <input type="text" class="form-control" id="confirmacao" formControlName="emailConfirmation" placeholder="Confirmar E-Mail" autocomplete="off">
           </mt-input-container>
         </div>
       </div>
@@ -30,18 +45,17 @@
         </div>
         <div class="col-sm-6 col-xs-12">
           <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" label="Endereço" >
-            <input type="text" class="form-control" id="endereco" name="address" ngModel required minlength="5" placeholder="Endereço" autocomplete="off">
+            <input type="text" class="form-control" id="endereco" formControlName="address" placeholder="Endereço" autocomplete="off">
           </mt-input-container>
         </div>
         <div class="col-sm-3 col-xs-6">
           <mt-input-container errorMessage="Obrigatório e somente números" label="Número">
-            <input type="text" class="form-control" id="numero" name="number" pattern="^[0-9]*$" ngModel required placeholder="Número" autocomplete="off">
+            <input type="text" class="form-control" id="numero" formControlName="number" placeholder="Número" autocomplete="off">
           </mt-input-container>
-
         </div>
         <div class="col-sm-3 col-xs-6">
           <mt-input-container>
-            <input type="text" class="form-control" id="complemento" name="optionalAddress" ngModel placeholder="Complemento" autocomplete="off">
+            <input type="text" class="form-control" id="complemento" formControlName="optionalAddress" placeholder="Complemento" autocomplete="off">
           </mt-input-container>
         </div>
         <!-- /.col -->
@@ -64,7 +78,7 @@
           <p class="lead">Formas de Pagamento:</p>
 
           <div class="form-group">
-            <mt-radio [options]="paymentOptions"name="paymentOption" ngModel required></mt-radio>
+            <mt-radio [options]="paymentOptions" formControlName="paymentOption"></mt-radio>
           </div>
 
         </div>
@@ -81,7 +95,7 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <button (click)="checkOrder(form.value)" href="order-summary.html" [disabled]="!form.valid && cartItems().length === 0" class="btn btn-success pull-right"><i class="fa fa-credit-card"></i> Concluir Pedido
+        <button (click)="checkOrder(orderForm.value)" href="order-summary.html" [disabled]="!orderForm.valid && cartItems().length === 0" class="btn btn-success pull-right"><i class="fa fa-credit-card"></i> Concluir Pedido
         </button>
       </div>
     </div>
