--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -2,7 +2,19 @@
 <section class="content-header">
   <h1>
     Todos os Restaurantes
+    <a (click)="toggleSearch()" class="search-link pull-right"><i class="fa fa-search"></i></a>
   </h1>
+
+  <!-- Barra de busca -->
+  <div class="row">
+    <div class="col-xs-12 search-bar" [@toggleSearch]="searchBarState">
+      <form>
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="O que você está procurando?" />
+        </div>
+      </form>
+    </div>
+  </div>
 </section>
 
 
@@ -12,7 +24,6 @@
     <div class="col-sm-6 col-xs-12" *ngFor="let restaurant of restaurants">
       <mt-restaurant [restaurant]="restaurant"></mt-restaurant>
     </div>
- 
   </div>
 
 </section>
