--- a/src/app/restaurants/restaurants.component.html
+++ b/src/app/restaurants/restaurants.component.html
@@ -2,15 +2,17 @@
 <section class="content-header">
   <h1>
     Todos os Restaurantes
-    <a (click)="toggleSearch()" class="search-link pull-right"><i class="fa fa-search"></i></a>
+    <a (click)="toggleSearch()" class="search-link pull-right">
+      <span *ngIf="iptSearch.value"><small>"{{iptSearch.value}}"</small></span><i class="fa fa-search"></i>
+    </a>
   </h1>
 
   <!-- Barra de busca -->
   <div class="row">
     <div class="col-xs-12 search-bar" [@toggleSearch]="searchBarState">
-      <form>
+      <form [formGroup]="searchForm">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="O que você está procurando?" />
+          <input type="text" #iptSearch formControlName="searchControl" class="form-control" placeholder="O que você está procurando?" />
         </div>
       </form>
     </div>
@@ -23,6 +25,11 @@
   <div class="row">
     <div class="col-sm-6 col-xs-12" *ngFor="let restaurant of restaurants">
       <mt-restaurant [restaurant]="restaurant"></mt-restaurant>
+    </div>
+    <div class="col-xs-12" *ngIf="restaurants?.length === 0">
+      <p class="lead text-center">
+        Não foram encontrados itens para a sua busca.
+      </p>
     </div>
   </div>
 
