--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
             <i class="fa fa-bars"></i>
           </button>
         </div>
-  
+
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
           <ul class="nav navbar-nav">
@@ -17,9 +17,8 @@
           </ul>
         </div>
         <!-- /.navbar-collapse -->
-  
+        <mt-user-detail></mt-user-detail>
       </div>
     </nav>
     </header>
     <!-- Fim do header -->
-  
